syntax = "proto3";

package Dto;

message CreateInviteRequest {
  int32 type = 1;
  int32 fromId = 2;
  string toName = 3;
  int32 key = 4;
}
