syntax = "proto3";

import "Item/Ring.proto";

package ItemProto;

message GiftDto {
  int32 id = 1;
  int32 to = 2;
  string from = 3;
  string message = 4;
  int32 sn = 5;
  ItemProto.RingDto ring = 6;
}

message GetMyGiftsRequest {
	int32 masterId = 1;
}

message GetMyGiftsResponse {
	repeated GiftDto list = 1;
}